fix: double border

--- a/blocks/profile/__button-add/profile__button-add.css
+++ b/blocks/profile/__button-add/profile__button-add.css
@@ -6,10 +6,9 @@
     background-repeat: no-repeat;
     background-position: center;
     background-color: transparent;
-    border: transparent;
-    cursor: pointer;
     border: 2px solid #FFFFFF;
     border-radius: 2px;
+    cursor: pointer;
     transition: all 0.5s;
 }
 
