--- a/blocks/profile/__button-edit/profile__button-edit.css
+++ b/blocks/profile/__button-edit/profile__button-edit.css
@@ -5,11 +5,10 @@
     background-repeat: no-repeat;
     background-position: center;
     background-color: transparent;
+    border: 1px solid #FFFFFF;
     cursor: pointer;
-    border: transparent;
     grid-area: button-edit;
     align-self: center;
-    border: 1px solid #FFFFFF;
     transition: all 0.5s;
 }
 
